--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
-    <div class="container">
-       
-    </div>
+    <h1 class="header">Etch-a-sketch</h1>
+    <div class="container"></div>
+    <form>
+        <input type="text" id="rows"><br>
+        <input type="text" id="columns"><br>
+    </form>
     <script src="scripts.js"></script>
 </body>
 </html>
