fix building new grid function

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
-    <h1 class="header">Etch-a-sketch</h1>
-    <div class="container"></div>
-    <form>
-        <input type="text" id="rows"><br>
-        <input type="text" id="columns"><br>
-    </form>
+    <div class="body-container">
+        <h1 class="header">Etch-a-sketch</h1>
+
+        <div class="container"></div>
+
+        <div class="user-input-title">
+            Change the size of the etch-a-sketch (max 100)
+        <button class="change-grid-size">Change Grid Size</button>
+        </div>
+
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
