--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="body-container">
-        <h1 class="header">Etch-a-sketch</h1>
+       
+            <h1 class="header">Etch-a-sketch</h1>
+      
 
         <div class="container"></div>
 
-        <div class="user-input-title">
-            Change the size of the etch-a-sketch (max 100)
-        <button class="change-grid-size">Change Grid Size</button>
+        <div class="buttons">
+            <button class="change-grid-size">Change Grid Size</button>
+            <button class="reset">Reset</button>
         </div>
-
     </div>
 
     <script src="scripts.js"></script>
