--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
 </head>
 <body>
     <div class="body-container">
-        <h1 class="header">Etch-a-sketch</h1>
+        <h1 class="header">
+            <font color="Red">E</font>
+            <font color="Orange">t</font>
+            <font color="Yellow">c</font>
+            <font color="Green">h</font>
+            <font color="White">-</font>
+            <font color="Blue">a</font>
+            <font color="White">-</font>
+            <font color="Indigo">S</font>
+            <font color="Violet">k</font>
+            <font color="Red">e</font>
+            <font color="Orange">t</font>
+            <font color="Yellow">c</font>
+            <font color="Blue">h</font></h1>
         <div class="mid-section">
-            <div class="buttons"><button class="change-grid-size">Change Grid Size</button>
-            <button class="change-colors">Random Colors</button>
-            <button class="reset">Reset</button>
+            <div class="buttons" ><button style ="background-color:red" class="change-grid-size">Change Grid Size</button>
+            <button style ="background-color:orange"class="change-colors">Random Colors</button>
+            <button style ="background-color:Yellow" class="reset">Reset</button>
             </div>
             <div class="container"></div>
            
